--- a/src/components/CardItem/CardItem.module.css
+++ b/src/components/CardItem/CardItem.module.css
@@ -1,8 +1,5 @@
 .wrapper {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,7 +32,7 @@
     box-shadow: 0px 4.39163px 4.39163px rgba(0, 0, 0, 0.06), inset 0px -2.19582px 4.39163px #AE7BE3, inset 0px 4.39163px 3.29372px #FBF8FF;
 }
 
-.avatar_wrapper {
+.avatar_cirkle {
     position: absolute;
     top: 178px;
     width: 80px;
@@ -46,19 +43,10 @@
 }
 
 .avatar_img {
-    position: absolute;
-    top: 178px;
-    width: 80px;
-    height: 80px;
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
 }
-
-/* .avatar_img::before {
-    content: "";
-    display: inline-block;
-    width: 380px;
-    height: 8px;
-    background-color: #EBD8FF;
-} */
 
 .list {
     margin-bottom: 26px;
